Bug 12974 - smbpasswd can't be run as user anymore
Summary: smbpasswd can't be run as user anymore
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.6.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andreas Schneider
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-08-18 07:41 UTC by Andreas Schneider
Modified: 2017-08-18 14:21 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2017-08-18 07:41:29 UTC
smbpasswd can't be run as user anymore.

"Failed to initialize the messaging context".


Patch will follow.
Comment 1 Andreas Schneider 2017-08-18 14:21:59 UTC
The code is only in master. Closing.